--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/Shared/_finalInstruccion.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/Shared/_finalInstruccion.cshtml
@@ -601,7 +601,7 @@
     </div>
     <div class="form-row">
         <div class="form-group col-md-12">
-            <button style="font-size:11px !important;" onclick="_renderFinalInstruccion.fncbuscaExpAllanamiento()" class="btn btn-primary " type="button"><i class="fa fa-search"></i>&nbsp;Buscar Expdiente en SITD</button>
+            <button style="font-size:11px !important;" onclick="_renderFinalInstruccion.fncbuscaExpAllanamiento()" class="btn btn-primary " type="button"><i class="fa fa-search"></i>&nbsp;Buscar Expediente en SITD</button>
             <br />
             <table id="tbAllanamientoFinalInstruccion" style="width:100%;margin:0px !important;" class="table table-hover table-bordered">
                 <thead>
@@ -624,7 +624,7 @@
     </div>
     <div class="form-row">
         <div class="form-group col-md-12">
-            <button style="font-size:11px !important;" onclick="_renderFinalInstruccion.fncbuscaExpSubsanacion()" class="btn btn-primary " type="button"><i class="fa fa-search"></i>&nbsp;Buscar Expdiente en SITD</button>
+            <button style="font-size:11px !important;" onclick="_renderFinalInstruccion.fncbuscaExpSubsanacion()" class="btn btn-primary " type="button"><i class="fa fa-search"></i>&nbsp;Buscar Expediente en SITD</button>
             <br />
             <table id="tbSubsanacionFinalInstruccion" style="width:100%;margin:0px !important;" class="table table-hover table-bordered">
                 <thead>
