--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_1.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_1.cshtml
@@ -1,4 +1,4 @@
-﻿<table width="500" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
@@ -21,8 +21,8 @@
         </tr>
     </tbody>
 </table>
-{{if !infraccion.flg_desvirtua}}
-<ul>
+{{if !infraccion.flgDesvirtua}}
+<ol class="continue" style="margin-left: -37pt;">
     <li>
         Mediante la Resolución Sub Directoral N° 00XXX-XXXX-OSINFOR/08.2.1, de fecha XX de XXXX, se imputó al/la concesionario/a presuntamente (descripción de la conducta).
     </li>
@@ -94,5 +94,5 @@
     <li>
         Por ello, estando a la evaluación realizada a los actuados en el presente procedimiento, <strong>y siendo que el/la concesionario/a no presentó argumentos de defensa suficientes que logren desacreditar los hechos que sustentan la imputación materia de análisis, ha quedado acreditada la comisión de la infracción tipificada en el numeral 1 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.</strong>
     </li>
-</ul>
+</ol>
 {{/if}}
