--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_13.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_13.cshtml
@@ -1,4 +1,4 @@
-﻿<table width="500" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
@@ -22,7 +22,7 @@
         </tr>
     </tbody>
 </table>
-<ul>
+<ol class="continue" style="margin-left: -37pt;">
     <li>
         Mediante la Resolución Sub Directoral N° 00XXX-XXXX-OSINFOR/08.2.1, de fecha XX de XXXX, se imputó al/la concesionario/a presuntamente incumplir con la implementación de la medida correctiva dispuesta por la Resolución Directoral N° XXXXXXXXXXXXX consistente en (detallar la medida correctiva).
     </li>
@@ -63,7 +63,7 @@
                         <div style="text-align: center;">
                             Cuadro N° XX: Plazo para la implementación de la medida correctiva señalada en la Resolución Directoral N° XXXXXXXXXXX
                         </div>
-                        <table width="450" cellpadding="4" border="0" style="font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%; margin-bottom: 0;">
+                        <table width="560" cellpadding="4" border="0" style="font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%; margin-bottom: 0;">
                             <thead>
                                 <tr style="background-color: #bfbfbf;">
                                     <th style="text-align: center; border: 1px solid #000;">
@@ -107,7 +107,7 @@
                         <div style="text-align: center;">
                             <strong>Cuadro N° XX: Ubicación de claros</strong>
                         </div>
-                        <table width="450" cellpadding="4" border="0" style="font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%; margin-bottom: 0;">
+                        <table width="560" cellpadding="4" border="0" style="font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%; margin-bottom: 0;">
                             <thead>
                                 <tr style="background-color: #bfbfbf;">
                                     <th style="text-align: center; border: 1px solid #000;" rowspan="2">
@@ -165,4 +165,4 @@
     <li>
         Por ello, estando a la evaluación realizada a los actuados en el presente procedimiento, <strong>y siendo que el/la concesionario/a no presentó argumentos de defensa suficientes que logren acreditar haber cumplido con la implementación de la medida correctiva dispuesta por la Resolución Directoral N° XXXXXXXXXX</strong>, ha quedado <strong>acreditada</strong> la comisión de la infracción tipificada en el numeral 13 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
     </li>
-</ul>
+</ol>
