--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_21.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_21.cshtml
@@ -1,4 +1,4 @@
-﻿<table width="500" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
@@ -22,7 +22,7 @@
         </tr>
     </tbody>
 </table>
-<ul>
+<ol class="continue" style="margin-left: -37pt;">
     <li>
         Mediante la Resolución Sub Directoral N° XXXXX-XXXX-OSINFOR/08.2.1, de fecha XX de XXXX, se imputó al/la concesionario/a presuntamente talar, extraer y/o aprovechar recursos forestales, sin autorización, en su condición o no de titular del título habilitante por un volumen de XX.XXX m3 (descripción del volumen total injustificado, precisando el volumen correspondiente a cada especie), a excepción de los aprovechados por subsistencia.
     </li>
@@ -63,7 +63,7 @@
                         <div style="text-align: center;">
                             <strong>Cuadro N° XX: Volumen injustificado</strong>
                         </div>
-                        <table width="500" cellpadding="4" border="0" style="font-family: Arial; font-size: 9pt; border-collapse: collapse; line-height: 150%; margin: 0 0 0 -50px;">
+                        <table width="560" cellpadding="4" border="0" style="font-family: Arial; font-size: 9pt; border-collapse: collapse; line-height: 150%;">
                             <thead>
                                 <tr style="background-color: #bfbfbf;">
                                     <th style="text-align: center; border: 1px solid #000;">
@@ -124,4 +124,4 @@
     <li>
         Por ello, estando a la evaluación realizada a los actuados en el presente procedimiento, <strong>y siendo que el/la concesionario/a no presentó argumentos de defensa suficientes que logren desacreditar los hechos que sustentan la imputación materia de análisis</strong>, ha quedado <strong>acreditada</strong> la comisión de la infracción tipificada en el numeral 21 del Cuadro de Infracciones en Materia Forestal del Anexo 1 del RISMFFS.
     </li>
-</ul>
+</ol>
