--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_b.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_b.cshtml
@@ -1,5 +1,5 @@
 ﻿<h5><strong>Sobre las causales de caducidad imputadas</strong></h5>
-<table width="500" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
@@ -23,7 +23,7 @@
         </tr>
     </tbody>
 </table>
-<ul>
+<ol class="continue" style="margin-left: -37pt;">
     <li>
         Mediante la Resolución Sub Directoral N° XXXXX-XXXX-OSINFOR/08.2.1, de fecha XX de XXXXX de XXXX, se imputó al/la concesionario/a presuntamente la incursión en la causal de caducidad por la extracción o movilización de recursos forestales y de fauna silvestre y de fauna silvestre por un volumen de XX.XXX m<sup>3</sup> (descripción del volumen total injustificado, precisando el volumen correspondiente a cada especie).
     </li>
@@ -133,4 +133,4 @@
     <li>
         Por ello, estando a la evaluación realizada a los actuados en el presente procedimiento, y siendo que el/la concesionario/a no ha presentado descargos que logren desacreditar los hechos que sustentan la imputación, ha quedado <strong>acreditada</strong> la incursión en la causal de caducidad prevista en el literal b) del artículo 153 de la LFFS, concordado con el literal b) del artículo 44 del RGF.
     </li>
-</ul>
+</ol>
