--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_e.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_e.cshtml
@@ -1,4 +1,4 @@
-﻿<table width="500" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
@@ -22,7 +22,7 @@
         </tr>
     </tbody>
 </table>
-<ul>
+<ol class="continue" style="margin-left: -37pt;">
     <li>
         Mediante la Resolución Sub Directoral N° XXXXX-XXXX-OSINFOR/08.2.1, de fecha XX de XXXX, se imputó al/la concesionario/a presuntamente no contar con regente forestal para la implementación del plan de manejo forestal.
     </li>
@@ -94,4 +94,4 @@
             </ul>
         </span>
     </li>
-</ul>
+</ol>
