--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_11.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_11.cshtml
@@ -1,4 +1,4 @@
-﻿<table width="500" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
@@ -22,7 +22,7 @@
         </tr>
     </tbody>
 </table>
-<ul>
+<ol class="continue" style="margin-left: -37pt;">
     <li>
         Mediante la Resolución Sub Directoral N° 00XXX-XXXX-OSINFOR/08.2.1, de fecha XX de XXXX, se imputó al/la concesionario/a presuntamente no tener el Libro de Operaciones.
     </li>
@@ -53,10 +53,10 @@
             </ul>
         </span>
     </li>
-</ul>
-{{if infraccion.flg_subsana}}
+</ol>
+{{if infraccion.flgSubsana}}
 <h5><strong>Sobre la subsanación voluntaria</strong></h5>
-<ul>
+<ol class="continue" style="margin-left: -37pt;">
     <li>
         <span>
             En tal sentido, teniendo en consideración que las condiciones y forma en cómo se procederá a realizar la subsanación voluntaria ya se encuentra establecida en el RISMFFS, resulta pertinente aplicar los criterios señalados en dicho Reglamento teniéndose en cuenta los siguientes requisitos:
@@ -66,7 +66,7 @@
                     Cuadro N° XX: Evaluación de los presupuestos para la configuración de la subsanación voluntaria
                 </strong>
             </div>
-            <table width="480" cellpadding="4" border="0" style="font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%; margin-bottom: 0;">
+            <table width="560" cellpadding="4" border="0" style="font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%; margin-bottom: 0;">
                 <thead>
                     <tr style="background-color: #bfbfbf;">
                         <th style="text-align: center; border: 1px solid #000;" colspan="2">Condiciones para la configuración de la subsanación voluntaria</th>
@@ -115,6 +115,8 @@
             </div>
         </span>
     </li>
+</ol>
+<ol class="continue" style="margin-left: -37pt;">
     <li>
         En atención a lo señalado precedentemente, se advierte que la conducta <strong>del/la concesionario/a</strong> <u>cumple con los requisitos para la aplicación de la figura de subsanación voluntaria respecto de la infracción materia de análisis</u>.
     </li>
@@ -124,5 +126,5 @@
     <li>
         Sin perjuicio de lo señalado anteriormente, se <strong>exhorta al/la concesionario/a</strong> a cumplir con su obligación como titular del contrato de concesión de remitir tener y mantener actualizado el Libro de Operaciones de acuerdo a los lineamientos aprobados por el SERFOR, a fin de evitar incurrir en futuras infracciones administrativas.
     </li>
-</ul>
+</ol>
 {{/if}}
