--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_2.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_2.cshtml
@@ -1,4 +1,4 @@
-﻿<table width="500" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
@@ -21,8 +21,8 @@
         </tr>
     </tbody>
 </table>
-{{if !infraccion.flg_desvirtua}}
-<ul>
+{{if !infraccion.flgDesvirtua}}
+<ol class="continue" style="margin-left: -37pt;">
     <li>
         Mediante la Resolución Sub Directoral N° 00XXX-XXXX-OSINFOR/08.2.1, de fecha XX de XXXX, se imputó al/la concesionario/a presuntamente incumplir con la presentación (descripción del tipo de informe de ejecución y el periodo).
     </li>
@@ -52,10 +52,10 @@
             </ul>
         </span>
     </li>
-</ul>
-{{if infraccion.flg_subsana}}
+</ol>
+{{if infraccion.flgSubsana}}
 <h5><strong>Sobre la subsanación voluntaria</strong></h5>
-<ul>
+<ol class="continue" style="margin-left: -37pt;">
     <li>
         <span>
             En tal sentido, teniendo en consideración que las condiciones y forma en cómo se procederá a realizar la subsanación voluntaria ya se encuentra establecida en el RISMFFS, resulta pertinente aplicar los criterios señalados en dicho Reglamento teniéndose en cuenta los siguientes requisitos:<br />
@@ -64,7 +64,7 @@
                     Cuadro N° XX: Evaluación de los presupuestos para la configuración de la subsanación voluntaria
                 </strong>
             </div>
-            <table width="480" cellpadding="4" border="0" style="font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%; margin-bottom: 0;">
+            <table width="560" cellpadding="4" border="0" style="font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%; margin-bottom: 0;">
                 <thead>
                     <tr style="background-color: #bfbfbf;">
                         <th style="text-align: center; border: 1px solid #000;" colspan="2">Condiciones para la configuración de la subsanación voluntaria</th>
@@ -113,6 +113,8 @@
             </div>
         </span>
     </li>
+</ol>
+<ol class="continue" style="margin-left: -37pt;">
     <li>
         En atención a lo señalado precedentemente, se advierte que la conducta <strong>del/la concesionario/a</strong> cumple con los requisitos para la aplicación de la figura de subsanación voluntaria respecto de la infracción materia de análisis.
     </li>
@@ -122,6 +124,6 @@
     <li>
         Sin perjuicio de lo señalado anteriormente, se exhorta al/la concesionario/a a cumplir con su obligación como titular del contrato de concesión, y de remitir a esta Administración, los informes de ejecución, dentro del plazo y forma establecida en la normativa vigente; es decir dentro de los cuarenta y cinco (45) días calendario de culminado el año operativo y suscrito por el regente, en los casos que corresponda, a fin de evitar incurrir en futuras infracciones administrativas.
     </li>
-</ul>
+</ol>
 {{/if}}
 {{/if}}
