--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_26.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_26.cshtml
@@ -1,4 +1,4 @@
-﻿<table width="500" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
@@ -22,7 +22,7 @@
         </tr>
     </tbody>
 </table>
-<ul>
+<ol class="continue" style="margin-left: -37pt;">
     <li>
         Mediante la Resolución Sub Directoral N° XXXXX-XXXX-OSINFOR/08.2.1, de fecha XX de XXXX, se imputó al/la concesionario/a presuntamente utilizar indebidamente o facilitar la guía de transporte forestal, así como la documentación otorgada o aprobada por la autoridad competente, para amparar la extracción no autorizada de un volumen de (descripción del volumen total injustificado, precisando el volumen correspondiente a cada especie), pues habría utilizado su contrato de concesión, su plan de manejo forestal, así como sus Guías de Transporte Forestal (GTF) para dar apariencia de legalidad al volumen de madera que provendría de individuos sobre los cuales no tenía autorización para extraer.
     </li>
@@ -69,4 +69,4 @@
     <li>
         Por ello, estando a la evaluación realizada a los actuados en el presente procedimiento, y siendo que el/la concesionario/a no presentó argumentos de defensa suficientes que logren desacreditar los hechos que sustentan la imputación materia de análisis, ha quedado acreditada la comisión de la infracción tipificada en el numeral 26 del Cuadro de Infracciones en Materia Forestal del Anexo 1 del RISMFFS.
     </li>
-</ul>
+</ol>
